--- a/notes/recursion/index.html
+++ b/notes/recursion/index.html
@@ -2,14 +2,17 @@
 Recursion : A function calling itself directly or indirectly.
 Directly:
 1void fun1(){ 2 //somecode ... 3 fun1(); 4 //some other code... 5} Indirectly: Not a very common approach (Mostly direct recursive approach is used)
+fun1() -> fun2() -> fun1()
 1void fun1(){ 2 //somecode ... 3 fun2(); 4 //some other code... 5} 6void fun2(){ 7 //somecode ... 8 fun1(); 9 //some other code... 10} 11 12  If you dont add a base case, recursion never stops and we might end up with stackoverflow(in case of java) or segmentation fault error(in case of cpp)."><meta name=title content="Recursion | Savitha Gollamudi"><meta name=keywords content="tech,programming,javascript,react,rust,nodejs,node,mongodb,postgresql"><meta name=robots content="index, follow"><meta charset=utf-8><meta name=language content="English"><meta name=revisit-after content="2 days"><meta name=author content="Abdus <mail@abdus.xyz>"><meta property="og:type" content="website"><meta property="og:url" content="https://www.gsavitha.in/notes/recursion/"><meta property="og:title" content="Recursion | Savitha Gollamudi"><meta property="og:description" content="Intro to recursion What is recursion?
 Recursion : A function calling itself directly or indirectly.
 Directly:
 1void fun1(){ 2 //somecode ... 3 fun1(); 4 //some other code... 5} Indirectly: Not a very common approach (Mostly direct recursive approach is used)
+fun1() -> fun2() -> fun1()
 1void fun1(){ 2 //somecode ... 3 fun2(); 4 //some other code... 5} 6void fun2(){ 7 //somecode ... 8 fun1(); 9 //some other code... 10} 11 12  If you dont add a base case, recursion never stops and we might end up with stackoverflow(in case of java) or segmentation fault error(in case of cpp)."><meta property="og:image" content="https://www.gsavitha.in/images/default-meta-img.png"><meta property="twitter:card" content="summary_large_image"><meta property="twitter:url" content="https://www.gsavitha.in/notes/recursion/"><meta property="twitter:title" content="Recursion | Savitha Gollamudi"><meta property="twitter:description" content="Intro to recursion What is recursion?
 Recursion : A function calling itself directly or indirectly.
 Directly:
 1void fun1(){ 2 //somecode ... 3 fun1(); 4 //some other code... 5} Indirectly: Not a very common approach (Mostly direct recursive approach is used)
+fun1() -> fun2() -> fun1()
 1void fun1(){ 2 //somecode ... 3 fun2(); 4 //some other code... 5} 6void fun2(){ 7 //somecode ... 8 fun1(); 9 //some other code... 10} 11 12  If you dont add a base case, recursion never stops and we might end up with stackoverflow(in case of java) or segmentation fault error(in case of cpp)."><meta property="twitter:image" content="https://www.gsavitha.in/images/default-meta-img.png"><title>Recursion | Savitha Gollamudi</title><meta name=google-site-verification content="SaBE4itR48HOEifszgie57M1Y1O9Ayk_rV5cBwah9LY"><body><small class=top-nav><a href=/>~/</a>
 <a href=/work/>~/work</a>
 <a href=/about/>~/about</a>
@@ -22,7 +25,7 @@ Directly:
 </span><span class=ln>3</span><span class=c1></span>    <span class=n>fun1</span><span class=p>();</span>
 <span class=ln>4</span>    <span class=c1>//some other code...
 </span><span class=ln>5</span><span class=c1></span><span class=p>}</span>
-</code></pre></div><p><em>Indirectly:</em> Not a very common approach (Mostly direct recursive approach is used)</p><div class=highlight><pre class=chroma><code class=language-cpp data-lang=cpp><span class=ln> 1</span><span class=kt>void</span> <span class=nf>fun1</span><span class=p>(){</span>
+</code></pre></div><p><em>Indirectly:</em> Not a very common approach (Mostly direct recursive approach is used)</p><p>fun1() -> fun2() -> fun1()</p><div class=highlight><pre class=chroma><code class=language-cpp data-lang=cpp><span class=ln> 1</span><span class=kt>void</span> <span class=nf>fun1</span><span class=p>(){</span>
 <span class=ln> 2</span>    <span class=c1>//somecode ...
 </span><span class=ln> 3</span><span class=c1></span>    <span class=n>fun2</span><span class=p>();</span>
 <span class=ln> 4</span>    <span class=c1>//some other code...
@@ -87,9 +90,44 @@ Directly:
 <span class=ln>14</span>    <span class=k>return</span> <span class=mi>0</span><span class=p>;</span>
 <span class=ln>15</span><span class=p>}</span>
 <span class=ln>16</span><span class=c1>//Output : 1213121
-</span></code></pre></div></div><div style=margin-top:2rem><i class="fas fa-tags" style=font-size:.7em;color:gray></i><a style="border:0;font-size:.8em;padding:0 4px;text-decoration:none" href=/tags/ds-algo>&nbsp;ds-algo</a>
+</span></code></pre></div><div class=highlight><pre class=chroma><code class=language-cpp data-lang=cpp><span class=ln> 1</span><span class=kt>int</span> <span class=nf>fn</span><span class=p>(</span><span class=kt>int</span> <span class=n>n</span><span class=p>)</span>
+<span class=ln> 2</span><span class=p>{</span>
+<span class=ln> 3</span>    <span class=k>if</span> <span class=p>(</span><span class=n>n</span> <span class=o>==</span> <span class=mi>1</span><span class=p>)</span>
+<span class=ln> 4</span>        <span class=k>return</span> <span class=mi>0</span><span class=p>;</span>
+<span class=ln> 5</span>    <span class=k>else</span>
+<span class=ln> 6</span>        <span class=k>return</span> <span class=mi>1</span> <span class=o>+</span> <span class=n>fn</span><span class=p>(</span><span class=n>n</span> <span class=o>/</span> <span class=mi>2</span><span class=p>);</span>
+<span class=ln> 7</span><span class=p>}</span>
+<span class=ln> 8</span><span class=c1>//TC: O(floor(logn base2))
+</span><span class=ln> 9</span><span class=c1>//SC: O(n/2)
+</span><span class=ln>10</span><span class=c1>//fn(16) -&gt; O/p: 4 =&gt; (1+f(8)) -&gt;(1+1+f(4)) -&gt;(1+1+1+f(2)) -&gt; (1+1+1+1+f(1))
+</span><span class=ln>11</span><span class=c1>//fn(20) -&gt; o/p: 4 =&gt;(1+f(10)) -&gt; (1+1+f(5)) -&gt; (1+1+1+f(2)) -&gt; (1+1+1+1+f(1))
+</span><span class=ln>12</span><span class=c1>//fn(19) -&gt; o/p:4 =&gt; (1+f(9)) -&gt; (1+1+f(4)) -&gt; -&gt;(1+1+1+f(2)) -&gt; (1+1+1+1+f(1))
+</span><span class=ln>13</span><span class=c1></span>
+<span class=ln>14</span><span class=c1>//output remains same until we get to next power of 2.
+</span></code></pre></div><blockquote><p>Binary representation of a number(n > 0) using recursion</p></blockquote><div class=highlight><pre class=chroma><code class=language-cpp data-lang=cpp><span class=ln>1</span><span class=kt>int</span> <span class=nf>fn</span><span class=p>(</span><span class=kt>int</span> <span class=n>n</span><span class=p>)</span>
+<span class=ln>2</span><span class=p>{</span>
+<span class=ln>3</span>    <span class=k>if</span> <span class=p>(</span><span class=n>n</span> <span class=o>==</span> <span class=mi>0</span><span class=p>)</span>
+<span class=ln>4</span>        <span class=k>return</span><span class=p>;</span>
+<span class=ln>5</span>    <span class=n>fn</span><span class=p>(</span><span class=n>n</span> <span class=o>/</span> <span class=mi>2</span><span class=p>);</span>
+<span class=ln>6</span>    <span class=n>cout</span> <span class=o>&lt;&lt;</span> <span class=n>n</span> <span class=o>%</span> <span class=mi>2</span> <span class=o>&lt;&lt;</span> <span class=n>endl</span><span class=p>;</span>
+<span class=ln>7</span><span class=p>}</span>
+<span class=ln>8</span><span class=c1>//TC:
+</span></code></pre></div><blockquote><p>print 1 to N using recursion</p></blockquote><div class=highlight><pre class=chroma><code class=language-java data-lang=java><span class=ln>1</span><span class=kd>private</span> <span class=kd>static</span> <span class=kt>void</span> <span class=nf>fn</span><span class=o>(</span><span class=kt>int</span> <span class=n>n</span><span class=o>)</span> <span class=o>{</span>
+<span class=ln>2</span>    <span class=k>if</span> <span class=o>(</span><span class=n>n</span> <span class=o>==</span> <span class=n>0</span><span class=o>)</span>
+<span class=ln>3</span>        <span class=k>return</span><span class=o>;</span>
+<span class=ln>4</span>    <span class=n>fn</span><span class=o>(</span><span class=n>n</span> <span class=o>-</span> <span class=n>1</span><span class=o>);</span>
+<span class=ln>5</span>    <span class=n>System</span><span class=o>.</span><span class=na>out</span><span class=o>.</span><span class=na>println</span><span class=o>(</span><span class=n>n</span><span class=o>);</span>
+<span class=ln>6</span><span class=o>}</span><span class=c1>//TC; O(n) AS: O(n+1)
+</span></code></pre></div><blockquote><p>print N to 1 using recursion</p></blockquote><div class=highlight><pre class=chroma><code class=language-java data-lang=java><span class=ln>1</span><span class=kd>private</span> <span class=kd>static</span> <span class=kt>void</span> <span class=nf>fn</span><span class=o>(</span><span class=kt>int</span> <span class=n>n</span><span class=o>)</span> <span class=o>{</span>
+<span class=ln>2</span>    <span class=k>if</span> <span class=o>(</span><span class=n>n</span> <span class=o>==</span> <span class=n>0</span><span class=o>)</span>
+<span class=ln>3</span>        <span class=k>return</span><span class=o>;</span>
+<span class=ln>4</span>    <span class=n>System</span><span class=o>.</span><span class=na>out</span><span class=o>.</span><span class=na>println</span><span class=o>(</span><span class=n>n</span><span class=o>);</span>
+<span class=ln>5</span>        <span class=n>n</span><span class=o>(</span><span class=n>n</span> <span class=o>-</span> <span class=n>1</span><span class=o>);</span>
+<span class=ln>6</span><span class=o>}</span><span class=c1>// TC: theta(n)
+</span><span class=ln>7</span><span class=c1>//SC: (Auxillary space) : O(n)
+</span></code></pre></div><ul><li><strong>Note:</strong> We can reduce the auxillary space using <em><em>tail recursion</em></em>.<ul><li>The above fn takes less time on modern compilers because of tail recursion</li></ul></li></ul><h2 id=tail-recursion>Tail Recursion</h2></div><div style=margin-top:2rem><i class="fas fa-tags" style=font-size:.7em;color:gray></i><a style="border:0;font-size:.8em;padding:0 4px;text-decoration:none" href=/tags/ds-algo>&nbsp;ds-algo</a>
 <a style="border:0;font-size:.8em;padding:0 4px;text-decoration:none" href=/tags/programming>&nbsp;programming</a>
-<a style="border:0;font-size:.8em;padding:0 4px;text-decoration:none" href=/tags/competitive-programming>&nbsp;competitive-programming</a></div><div style=margin-top:5rem><a href=https://www.gsavitha.in/notes/ch-01-intro-to-react/ class="prev-next newer">&Larr;Intro to React</a></div><script type=application/ld+json>{"@context":"http://schema.org","@type":"BlogPosting","mainEntityOfPage":{"@type":"WebPage","@id":"https:\/\/www.gsavitha.in\/"},"articleSection":"notes","name":"Recursion","headline":"Recursion","description":"Intro to recursion What is recursion?\nRecursion : A function calling itself directly or indirectly.\nDirectly:\n1void fun1(){ 2 \/\/somecode ... 3 fun1(); 4 \/\/some other code... 5} Indirectly: Not a very common approach (Mostly direct recursive approach is used)\n1void fun1(){ 2 \/\/somecode ... 3 fun2(); 4 \/\/some other code... 5} 6void fun2(){ 7 \/\/somecode ... 8 fun1(); 9 \/\/some other code... 10} 11 12  If you dont add a base case, recursion never stops and we might end up with stackoverflow(in case of java) or segmentation fault error(in case of cpp).","inLanguage":"en-US","author":"Savitha","creator":"Savitha","publisher":"Savitha","accountablePerson":"Savitha","copyrightHolder":"Savitha","copyrightYear":"23230","datePublished":"2020-08-23 17:17:32 \u002b0530 \u002b0530","dateModified":"2020-08-23 17:17:32 \u002b0530 \u002b0530","url":"https:\/\/www.gsavitha.in\/notes\/recursion\/","wordCount":"480","keywords":["ds-algo","programming","competitive-programming","Blog"]}</script><script type=module>
+<a style="border:0;font-size:.8em;padding:0 4px;text-decoration:none" href=/tags/competitive-programming>&nbsp;competitive-programming</a></div><div style=margin-top:5rem><a href=https://www.gsavitha.in/notes/ch-01-intro-to-react/ class="prev-next newer">&Larr;Intro to React</a></div><script type=application/ld+json>{"@context":"http://schema.org","@type":"BlogPosting","mainEntityOfPage":{"@type":"WebPage","@id":"https:\/\/www.gsavitha.in\/"},"articleSection":"notes","name":"Recursion","headline":"Recursion","description":"Intro to recursion What is recursion?\nRecursion : A function calling itself directly or indirectly.\nDirectly:\n1void fun1(){ 2 \/\/somecode ... 3 fun1(); 4 \/\/some other code... 5} Indirectly: Not a very common approach (Mostly direct recursive approach is used)\nfun1() -\u0026gt; fun2() -\u0026gt; fun1()\n1void fun1(){ 2 \/\/somecode ... 3 fun2(); 4 \/\/some other code... 5} 6void fun2(){ 7 \/\/somecode ... 8 fun1(); 9 \/\/some other code... 10} 11 12  If you dont add a base case, recursion never stops and we might end up with stackoverflow(in case of java) or segmentation fault error(in case of cpp).","inLanguage":"en-US","author":"Savitha","creator":"Savitha","publisher":"Savitha","accountablePerson":"Savitha","copyrightHolder":"Savitha","copyrightYear":"23230","datePublished":"2020-08-23 17:17:32 \u002b0530 \u002b0530","dateModified":"2020-08-23 17:17:32 \u002b0530 \u002b0530","url":"https:\/\/www.gsavitha.in\/notes\/recursion\/","wordCount":"677","keywords":["ds-algo","programming","competitive-programming","Blog"]}</script><script type=module>
   import { annotate } from "https://unpkg.com/rough-notation?module";
 
   function checkParent(elem) {
@@ -141,9 +179,9 @@ Directly:
     console.log(exception.message);
   }
 </script><style>.section-content em,.section-content strong,.section-content del{font-style:normal;font-weight:400;text-decoration:none}blockquote{background-color:#fff;padding:.3rem;margin:2rem 0}</style></div><footer style="padding:6rem 1rem 2rem;text-align:center;color:gray"><small style=display:block><code>recursion.md</code> was last updated on
-<code>1 September, 2020</code>. Generated
+<code>1 October, 2020</code>. Generated
 from
-<a target=_blank href=https://github.com/g-savitha/portfolio/tree/dc9a1312c87cc0a97b4bced4510135347d9fc216 style=text-decoration:none><code>dc9a131</code></a>
-because of <code>new post</code></small>
+<a target=_blank href=https://github.com/g-savitha/portfolio/tree/d6463c9c35de31a230267c30456f79ece49e87dc style=text-decoration:none><code>d6463c9</code></a>
+because of <code>📘</code></small>
 <small>built with <a href=https://gohugo.io>hugo</a> and
 <span style=color:red>❤️</span></small></footer><script>(()=>{if(document.queryCommandSupported("copy")){const codeBlocks=[...document.querySelectorAll(".highlight")];codeBlocks.forEach((block)=>{block.querySelector("pre.chroma").style.paddingTop="3rem";block.style.position="relative";const handler=document.createElement("button");handler.textContent="COPY";handler.style.position="absolute";handler.style.top="10px";handler.style.right="10px";handler.style.padding="0.25rem 0.5rem";handler.style.background="#272822";handler.style.borderRadius="4px";handler.style.border="1px solid #C9D5DE";handler.style.color="#ffffff";handler.addEventListener("click",()=>{const textarea=document.createElement("textarea");textarea.value=block.querySelector(".chroma > code").textContent;document.body.prepend(textarea);textarea.style.position="absolute";textarea.style.opacity=0;textarea.select();document.execCommand("copy");textarea.remove();handler.textContent="COPIED!";setTimeout(()=>(handler.textContent="COPY"),2000);});const langCard=document.createElement("span");const lang=block.querySelector(".chroma > code").classList.toString().split("language-")[1];langCard.textContent=lang;langCard.style.top="0";langCard.style.left="1rem";langCard.style.color="#ffffff";langCard.style.fontSize="0.7em";langCard.style.position="absolute";langCard.style.background="#3f51b5";langCard.style.padding="0.25rem 0.5rem";langCard.style.textTransform="uppercase";langCard.style.borderRadius="0 0 4px 4px";block.prepend(langCard);block.prepend(handler);});}})();</script></body></html>
